--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,24 +1,24 @@
-#name: pipeline
-#on:
-#  push:
-#    branches:
-#      -  "main"
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v3
-#
-#      - name: setup java
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: 17
-#          distribution: 'adopt'
-#      - name: setup Maven
-#        uses: stCarolas/setup-maven@v4.4
-#        with:
-#          maven-version: 3.8.2
-#      - name: run compile
-#        run: mvn clean install
+name: pipeline
+on:
+  push:
+    branches:
+      -  "master"
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: setup java
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: 'adopt'
+      - name: setup Maven
+        uses: stCarolas/setup-maven@v4.4
+        with:
+          maven-version: 3.8.2
+      - name: run compile
+        run: mvn clean install
 
