--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,12 +21,11 @@ jobs:
           maven-version: 3.8.2
       - name: run compile
         run: mvn clean install
-
       - name: Build and push Docker image
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
           image: teem001/blog-app-cicd
-          tags: latest
+          tags: v1
           registry: docker.io
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
